Fix Railway deployment: copy views folder during build and add fallback response
- Updated build script to copy views folder to dist
- Added try-catch fallback for root endpoint when HTML not available
- Server now returns helpful JSON response if views aren't copied
- Fixes ENOENT error when accessing root URL in production

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "tsc && npm run copy-views",
+    "copy-views": "node -e \"require('fs').cpSync('src/views', 'dist/views', {recursive: true})\"",
     "start": "node dist/server.js",
     "test": "jest"
   },
